--- a/404/squares-rotating.html
+++ b/404/squares-rotating.html
@@ -56,6 +56,7 @@ body {
 	padding-bottom: 10%;
 	background: #FF4D00;
 
+
 	animation-delay: 0s;
 }
 
@@ -91,6 +92,7 @@ body {
 
 	0% {
 		opacity: 0;
+		transform: rotate(0deg);
 	}
 
 	50% {
@@ -99,6 +101,7 @@ body {
 
 	100% {
 		opacity: 0;
+		transform: rotate(360deg);
 	}
 }
 
