Add some glitch

--- a/404/squares.html
+++ b/404/squares.html
@@ -13,13 +13,16 @@ body {
 }
 
 .page {
-	background-color: #eee;
+	background-color: white;
 	width: 100vw;
 	height: 100vh;
 	position: relative;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	background-image: url('glitch1.gif');
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 
 .center-square {
