--- a/404/squares-clouds.html
+++ b/404/squares-clouds.html
@@ -20,6 +20,9 @@ body {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	background-image: url('clouds.png');
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 
 .center-square {
