--- a/404/internal-server-error.html
+++ b/404/internal-server-error.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>TUNNEL</title>
+  <title>Internal Server Error</title>
 
 	<style type="text/css">
 
@@ -20,6 +20,9 @@ body {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	background-image: url('glitch1.gif');
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 
 .center-square {
@@ -41,20 +44,21 @@ body {
 .square {
 	position: absolute;
 	height: 0;
-	border: 5vw solid #FF4D00;
+	border: 5vw solid #000;
 	background: transparent;
 
 	animation-name: pulse;
 	animation-timing-function: ease-out;
 	animation-iteration-count: infinite;
 	animation-play-state: running;
-	animation-duration: 4s;
+	animation-duration: 2s;
 }
 
 .square-1 {
 	width: 10%;
 	padding-bottom: 10%;
-	background: #FF4D00;
+	background: #000;
+
 
 	animation-delay: 0s;
 }
@@ -91,6 +95,7 @@ body {
 
 	0% {
 		opacity: 0;
+		transform: rotate(0deg);
 	}
 
 	50% {
@@ -99,50 +104,76 @@ body {
 
 	100% {
 		opacity: 0;
+		transform: rotate(360deg);
 	}
 }
 
-.box {
-	position: absolute;;
-	height: 40%;
-	z-index: 1;
-	display: flex;
-	justify-content: space-between;
+@keyframes displace {
 
-	animation-name: pulse;
+	0% {
+		left: auto;
+		top: auto;
+	}
+
+	49% {
+		left: auto;
+		top: auto;
+	}
+
+	50% {
+		left: 10px;
+		top: -20vw;
+	}
+
+	53% {
+		left: auto;
+		top: auto;
+	}
+
+	100% {
+		left: auto;
+		top: auto;
+	}
+}
+
+.message {
+	padding: 20px 40px;
+	position: absolute;
+	margin-top: 30vh;
+	background-color: #c00;
+	font-family: helvetica;
+	color: white;
+	text-align: center;
+	z-index: 2;
+
+	animation-name: displace;
 	animation-timing-function: ease-out;
 	animation-iteration-count: infinite;
 	animation-play-state: running;
-	animation-duration: 8s;
+	animation-duration: 10s;
 	animation-delay: 0;
 }
 
-.box--left {
-	left: 20vw;
+.message h1 {
+	text-transform: uppercase;
+	font-size: 4vw;
 }
 
-.box--right {
-	right: 20vw;
+.message h2 {
+	font-size: 2vw;
+	font-weight: normal;;
 }
 
-.line {
-	width: 5vw;
-	height: 100%;
-	background-color: black;
-}
+@media only screen and (max-width: 600px) {
 
-.line--1 {
-	height: 30vh;
-}
+	.message h1 {
+		font-size: 5vw;
+	}
 
-.line--2 {
-	height: 10vh;
-	margin-top: 20vh;
-}
+	.message h2 {
+		font-size: 3vw;
+	}
 
-.line--3 {
-	height: 30vh;
-	align-self: flex-end;
 }
 
 	</style>
@@ -152,23 +183,18 @@ body {
 
 	<div class="page">
 
-		<div class="box box--left">
-			<div class="line line--1"></div>
-			<div class="line line--2"></div>
-			<div class="line line--3"></div>
-		</div>
-
-		<div class="box box--right">
-			<div class="line line--1"></div>
-			<div class="line line--2"></div>
-			<div class="line line--3"></div>
+		<div class="message">
+			<h1>Internal Server Error</h1>
+			<h2>Error code: @356e724a-9c75-4c8f-de6634ff6aff</h2>
 		</div>
 
 		<div class="center-square">
-			<a href="https://jalopnik.com">
+			<a href="https://kinja.com">
 				<svg viewBox="0 0 50 50" xmlns="http://www.w3.org/2000/svg">
-					<path fill="#FF4D00" d="M0 0h50v50H0z"/>
-					<path d="M21.602 41.344c-.543.002-1.954.062-2.696.062H11.72l1.4-13.906h7.267c.742 0 1.41-.602 1.482-1.34l1.767-17.566 13.375.001-1.867 18.924a18.96 18.96 0 0 1-.494 2.636s-1.495 11.12-13.05 11.189" fill="#FFF"/>
+					<g fill="none" fill-rule="evenodd">
+					<path fill="#000" d="M0 0h50v50H0z"/>
+					<path d="M7.31 22.806s.167-.204.229-.204h13.906c2.308 0 4.386.304 5.945 2.9 2.304 3.835 10.394 17.882 10.394 17.882H26.933c-1.414 0-3.96-.107-5.779-3.38-1.65-2.97-6.496-11.49-7.275-12.84-.78-1.352-2.474-3.282-4.345-3.905-1.58-.527-2.225-.453-2.225-.453m.391-.381s-.092-.247-.06-.3c.996-1.712 6.371-10.953 6.993-12.02 1.16-1.995 2.474-3.668 5.502-3.678 4.511-.013 22.56.013 22.56.013l-5.457 9.379c-.711 1.222-2.09 3.366-5.834 3.292-3.397-.068-15.071-.165-16.631-.17-1.56-.007-4.082.487-5.561 1.79-1.25 1.1-1.512 1.694-1.512 1.694" fill="#FFF"/>
+					</g>
 				</svg>
 			</a>
 		</div>
